Fix scroll on ios

--- a/less/sidebar-core.less
+++ b/less/sidebar-core.less
@@ -38,6 +38,8 @@
         text-align: left;
         font-size: @sidebar-default-font-size;
 
+        -webkit-overflow-scrolling: touch;
+
         ul {
             padding: 0;
             margin: 0;
